--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  border: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,15 +8,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-image: url('../src/icons/background.jfif');
   padding: 0;
+  box-sizing: border-box;
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: auto;
   grid-template-areas: 
     "header "
-    "main "
+    "main ."
     "footer ";
-
-  align-items: start;
 }
 
 code {
